# mlserver-repository

./: pyproject.toml
models/Orion-14B-Chat-Int4/: model-settings.json  model.py
models/hello_world/: model-settings.json  model.py
